--- a/Personal/Spiderbot/SpiderLeg/SpiderLeg/SpiderLeg.vcxproj.filters
+++ b/Personal/Spiderbot/SpiderLeg/SpiderLeg/SpiderLeg.vcxproj.filters
@@ -17,5 +17,17 @@
   <ItemGroup>
     <None Include="SpiderLeg.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.SpiderLeg.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SpiderLegController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="SpiderLegController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
